apps/jackett/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
spec:
  selector:
    matchLabels:
      app: jackett
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jackett
    spec:
      containers:
      - name: jackett
        # IMAGE=ghcr.io/linuxserver/jackett; skopeo --override-os linux list-tags "docker://${IMAGE}" | jq -r '.Tags[]' | sort -V | tail -n1
        # image: ghcr.io/linuxserver/jackett:version-v0.22.1857
        image: alpine
        command: [ "sleep" ]
        args: [ "infinity" ]
        ports:
        - name: http
          containerPort: 9117
        readinessProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 15
          periodSeconds: 20
        volumeMounts:
        - name: jackett-iscsi
          subPath: config
          mountPath: /config-iscsi
        - name: jackett-rook
          subPath: config
          mountPath: /config-rook
      volumes:
      - name: jackett-iscsi
        persistentVolumeClaim:
          claimName: jackett-iscsi-pvc
      - name: jackett-rook
        persistentVolumeClaim:
          claimName: jackett
